chore(fix): send message and follow